When SW install fails, null out registration.installing before setting worker state to "redundant" https://bugs.webkit.org/show_bug.cgi?id=182416 <rdar://problem/37141997>

Reviewed by Youenn Fablet.

LayoutTests/imported/w3c:

Rebaseline WPT test now that one more check is passing.

* web-platform-tests/service-workers/service-worker/register-same-scope-different-script-url.https-expected.txt:

Source/WebCore:

When SW install fails, null out registration.installing before setting worker state to "redundant".
This does not match the spec but this is what Firefox and Chrome do. This is also what the
web-platform-tests expect.

Test: http/tests/workers/service/install-fails.html

* workers/service/server/SWServerJobQueue.cpp:
(WebCore::SWServerJobQueue::didFinishInstall):

LayoutTests:

Add layout test coverage. I have verified that this test is passing in both Firefox and Chrome.

* http/tests/workers/service/install-fails-expected.txt: Added.
* http/tests/workers/service/install-fails.html: Added.
* http/tests/workers/service/resources/install-fails-worker.js: Added.
(event.event.waitUntil.new.Promise):


Canonical link: https://commits.webkit.org/198215@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227997 268f45cc-cd09-0410-ab3c-d52691b4dbfc